# icassp-oov-recognition

./: CMakeLists.txt  README.md
data/de/: oov_lexicon  oov_list
data/de/data_test/: spk2utt  text  utt2spk  wav.scp
data/en/: oov_lexicon  oov_list
data/en/data_test/: spk2utt  text  utt2spk  wav.scp
libs/: fast.cc  fst-wrapper.cc  fst-wrapper.h
scripts/: build_cv_test_train.py  compose_hcl.sh  create_lfst.py  expand_fsts.py  recover_unk_words.sh
